--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <p><img src="https://pngimg.com/uploads/computer_pc/computer_pc_PNG17489.png" alt="This is an image" /></p>
 
-<p><strong><a href="https://en.wikipedia.org/wiki/Computer?msclkid=ba2e4f59d06211ec9c7bd3116137c845">page 2</a></strong></p>
+<p><strong><a href="https://justinsirbu.github.io/JustinSirbu/">page 2</a></strong></p>
 
 
 
