--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <tbody>
         <tr>
           <td>**<a href="https://www.bing.com/shop?q=computer+prices&amp;FORM=SHOPTB">normal computer prices</a></td>
-          <td>normal 100-500**  💸 <br /></td>
+          <td>normal 100-500 💸 <br /></td>
         </tr>
       </tbody>
     </table>
@@ -97,7 +97,7 @@
       <tbody>
         <tr>
           <td>**<a href="https://www.bing.com/shop?q=gaming+computer&amp;FORM=SHOPTB">gaming computer prices</a></td>
-          <td>gaming 500-2000** 💸 <br /></td>
+          <td>gaming 500-2000 💸 <br /></td>
         </tr>
       </tbody>
     </table>
