--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <table>
       <tbody>
         <tr>
-          <td>**<a href="https://www.bing.com/shop?q=computer+prices&amp;FORM=SHOPTB">normal computer prices</a></td>
+          <td> <a href="https://www.bing.com/shop?q=computer+prices&amp;FORM=SHOPTB">normal computer prices</a></td>
           <td>normal 100-500 💸 <br /></td>
         </tr>
       </tbody>
@@ -96,7 +96,7 @@
     <table>
       <tbody>
         <tr>
-          <td>**<a href="https://www.bing.com/shop?q=gaming+computer&amp;FORM=SHOPTB">gaming computer prices</a></td>
+          <td> <a href="https://www.bing.com/shop?q=gaming+computer&amp;FORM=SHOPTB">gaming computer prices</a></td>
           <td>gaming 500-2000 💸 <br /></td>
         </tr>
       </tbody>
