--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 <!-- link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" -->
 
 <!-- end custom head snippets -->
+    <style>
+      body {
+       background-color: green;
+        
+      }
+    </style>
 
   </head>
   <body>
