--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!-- end custom head snippets -->
     <style>
       body {
-       background-color: green;
+       background-color: black;
         
       }
     </style>
